Upload of started text on coordinates systems

--- a/tex_sources/general_bibliography.bib
+++ b/tex_sources/general_bibliography.bib
@@ -1,3 +1,4 @@
+% ============== LOGIC ==============
 @book{smith_intro_formal_logic,
     author =       "Peter Smith",
     title =        "An Introduction to Formal Logic",
@@ -19,6 +20,8 @@
     publisher =	   "Logic Matters"
 }
 
+
+% ============== PHYSICS ==============
 @book{qm_handbook_griffiths,
     author =       "Griffiths, David J. and Schrotter, Darrell F.",
     title =        "Introduction to Quantum Mechanics",
@@ -40,20 +43,40 @@
     publisher =	   "Springer"
 }
 
+
+
+% ============== ALGEBRA ==============
 @book{algebra1_kostrikin,
     author =       "Aleksiej I. Kostrikin",
-    title =        "Wstęp do algebry 1. Podstawy algebry",
+    title =        "Wstep do algebry 1. Podstawy algebry",
     year =         "2008",
     publisher =	   "PWN"
 }
 
 @book{algebra2_kostrikin,
     author =       "Aleksiej I. Kostrikin",
-    title =        "Wstęp do algebry 2. Algebra liniowa",
+    title =        "Wstep do algebry 2. Algebra liniowa",
     year =         "2012",
     publisher =	   "PWN"
 }
 
+@book{hungerford_algebra,
+    author =       "Thomas W. Hungerford",
+    title =        "Algebra",
+    year =         "2000",
+    publisher =	   "Springer"
+}
+
+@book{pinter_abstract_algebra,
+    author =       "Charles C. Pinter",
+    title =        "A Book of Abstract Algebra",
+    year =         "1990",
+    publisher =	   "Dover"
+}
+
+
+
+% ============== miscellanea ==============
 @misc{what_is_the_se,
 	author = {{Physics Explained}},
 	title = {What is the {S}chrödinger {E}quation? {A} 
@@ -66,4 +89,5 @@
 	title = {The Development of the Space-Time View of Quantum Electrodynamics},
 	howpublished = {\url{https://www.nobelprize.org/prizes/physics/1965/feynman/lecture/}}
 }
+
 
